k3s-manifest/alertmanager/alertmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: monitoring
  labels:
    app: alertmanager
spec:
  type: ClusterIP
  ports:
  - port: 9093
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: alertmanager
